# scion

./: BUILD.bazel
filter_topos/: default_topology.json  topo_generator.py  topology.json
go/integration/: BUILD.bazel  common.go  filter_common.go
go/integration/filter_base/: BUILD.bazel  main.go
go/integration/filter_common/: main.go
go/integration/filter_configs/: empty_rfconfig.toml  first_try.toml  intervalRL_external.toml  intervalRL_internal.toml  intervalRL_internal_and_external.toml  interval_test.toml  pathlength1.toml  pathlength_internal_and_max1.toml  pathlength_internal_and_max2.toml  pathlength_min0_max0  pathlength_min0_max0.toml  pathlength_min0_max1  pathlength_min0_max1.toml  pathlength_min0_max2  pathlength_min0_max2.toml  pathlength_min1_max1  pathlength_min1_max1.toml  pathlength_min1_max2  pathlength_min1_max2.toml  pathlength_min2_max2  pathlength_min2_max2.toml  pathlength_only_external.toml  pathlength_only_internal.toml  pathlength_test.toml  perasratelimit_local_and_outside  perasratelimit_local_and_outside.toml  perasratelimit_only_local  perasratelimit_only_local.toml  perasratelimit_only_outside  perasratelimit_only_outside.toml  seglength_core.toml  seglength_noncore.toml  test_empty_path.toml  test_neighbour_path.toml  test_rl_16bit_1024.toml  test_rl_16bit_16.toml  test_rl_16bit_16384.toml  test_rl_8bit_1024.toml  test_rl_8bit_16.toml  test_rl_8bit_16384.toml  (+33 more)
go/integration/filter_integration_base/: BUILD.bazel  main.go
go/integration/filter_integration_common/: common.go
go/integration/filter_results/: first_try  intervalRL_external  intervalRL_internal  intervalRL_internal_and_external  pathlength1  pathlength_internal_and_max2  pathlength_min0_max0  pathlength_min0_max1  pathlength_min1_max1  pathlength_min1_max2  pathlength_min2_max2  pathlength_only_external  pathlength_only_internal  perasratelimit_local_and_outside  perasratelimit_only_local  (+19 more)
go/integration/perasratelimit_filter_integration/: BUILD.bazel  main.go
go/integration/request_filter_integration_base/: BUILD.bazel  main.go
go/integration/second_filter_base/: BUILD.bazel  main.go
go/integration/test_server_and_client/: BUILD.bazel  main.go
go/integration/test_server_runner/: BUILD.bazel  main.go
go/integration/whitelist_filter_integration/: BUILD.bazel  main.go
go/lib/infra/modules/filters/: BUILD.bazel  filter_connection.go  filter_dispatcher.go  filter_result.go  filter_transport.go  filters.go  whitelist.go  whitelist_test.go
go/lib/infra/modules/filters/counting_bloom/: BUILD.bazel  counting_bloom.go  counting_bloom_data.go  counting_bloom_data_test.go  counting_bloom_test.go
go/lib/infra/modules/filters/drkey_filter/: BUILD.bazel  drkey_filter_config.go  drkey_filter_config_test.go  drkey_filtering.go  drkey_filtering_test.go
go/lib/infra/modules/filters/filter_creation/: BUILD.bazel  faulty_test_config  faulty_test_config.toml  filter_creation.go  filter_creation_test.go  packet_filters_config.go  packet_filters_config_test.go  test_config  test_config.toml
go/lib/infra/modules/filters/filter_handler/: BUILD.bazel  filter_handler.go  filter_handler_config.go  filter_handler_config_test.go  filter_handler_test.go  request_config_test.go
go/lib/infra/modules/filters/packet_filters/: BUILD.bazel  filter_packet_connection.go  filter_packet_dispatcher.go
go/lib/infra/modules/filters/packet_filters/drkey_filter/: BUILD.bazel  drkey_filter_config.go  drkey_filter_config_test.go  drkey_filtering.go  drkey_filtering_test.go
go/lib/infra/modules/filters/packet_filters/filter_creation/: BUILD.bazel  faulty_test_config.toml  filter_creation.go  filter_creation_test.go  packet_filters_config.go  packet_filters_config_test.go
go/lib/infra/modules/filters/packet_filters/path_length/: BUILD.bazel  path_length_config.go  path_length_config_test.go  path_length_filtering.go  path_length_filtering_test.go
go/lib/infra/modules/filters/path_length/: BUILD.bazel  path_length_config.go  path_length_config_test.go  path_length_filtering.go  path_length_filtering_test.go
go/lib/infra/modules/filters/per_as_rate_limiting/: BUILD.bazel  packet_rate_limit_config.go  packet_rate_limit_config_test.go  packet_rate_limit_filter.go  packet_rate_limit_filter_test.go  rate_limit_config.go  rate_limit_config_test.go  rate_limit_filter.go  rate_limit_filter_test.go  rate_limiting.go  rate_limiting_config.go  rate_limiting_config_test.go  rate_limiting_creation.go  rate_limiting_creation_test.go  rate_limiting_test.go
go/lib/infra/modules/filters/request_filters/: BUILD.bazel  request_filters.go
go/lib/infra/modules/filters/request_filters/counting_bloom/: BUILD.bazel  counting_bloom.go  counting_bloom_data.go  counting_bloom_data_test.go  counting_bloom_test.go
go/lib/infra/modules/filters/request_filters/filter_handler/: BUILD.bazel  filter_handler.go  filter_handler_config_test.go  filter_handler_test.go  request_config.go  request_config_test.go
go/lib/infra/modules/filters/request_filters/interval_request_limiting/: BUILD.bazel  interval_request_limit_config.go  interval_request_limit_config_test.go  interval_request_limit_filter.go  interval_request_limit_filter_test.go
go/lib/infra/modules/filters/request_filters/path_length/: BUILD.bazel  empty_path_filter.go  path_length_one_filter.go  path_length_test.go  segment_filter.go
go/lib/infra/modules/filters/request_filters/whitelisting/: BUILD.bazel  external_filters.go  external_filters_test.go  internal_filters.go  internal_filters_test.go  rescanning_infra.go  rescanning_neighbours.go  rescanning_test.go  shared.go
go/lib/infra/modules/filters/whitelisting/: BUILD.bazel  topology.json  topology1.json  whitelist.go  whitelist_config.go  whitelist_config_test.go  whitelist_creation.go  whitelist_creation_test.go  whitelist_test.go  whitelisting_settings.go
go/lib/infra/modules/filters/whitelisting/whitelist_filters/: BUILD.bazel  local_filters.go  local_filters_test.go  outside_filters.go  outside_filters_test.go  rescanning_infra.go  rescanning_neighbours.go  rescanning_test.go  shared.go
(+22 files in other folders)
