load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/request_filter_integration_base",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/integration:go_default_library",
        "//go/lib/log:go_default_library",
    ],
)

go_binary(
    name = "request_filter_integration_base",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
