load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/test_server_and_client",
    visibility = ["//visibility:private"],
    deps = [
        "//go/integration:go_default_library",
        "//go/lib/ctrl/cert_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/disp:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/infra/modules/filters/request_filters/filter_handler:go_default_library",
        "//go/lib/infra/transport:go_default_library",
        "//go/lib/integration:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/periodic:go_default_library",
        "//go/lib/scrypto:go_default_library",
        "//go/lib/snet:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
    ],
)

go_binary(
    name = "test_server_and_client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
