load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/test_server_runner",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/integration:go_default_library",
        "//go/lib/log:go_default_library",
    ],
)

go_binary(
    name = "test_server_runner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
