load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "filter_connection.go",
        "filter_dispatcher.go",
        "filters.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/layers:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/overlay:go_default_library",
        "//go/lib/scmp:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "//go/lib/spath:go_default_library",
    ],
)
