load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "counting_bloom.go",
        "counting_bloom_data.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/counting_bloom",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel-scion/external/com_github_pierrec_xxhash/xxHash32:go_default_library",
        "//go/lib/common:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "counting_bloom_data_test.go",
        "counting_bloom_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//bazel-scion/external/go_sdk/src/fmt:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
