load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["drkey_filtering.go"],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/drkey_filter",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/scmp:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spse:go_default_library",
        "//go/lib/spse/scmp_auth:go_default_library",
    ],
)
