load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["filter_creation.go"],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/filter_creation",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/infra/modules/filters/path_length:go_default_library",
        "//go/lib/infra/modules/filters/per_as_rate_limiting:go_default_library",
        "//go/lib/infra/modules/filters/whitelisting:go_default_library",
        "//go/lib/log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["filter_creation_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/infra/modules/filters/path_length:go_default_library",
        "//go/lib/infra/modules/filters/per_as_rate_limiting:go_default_library",
        "//go/lib/infra/modules/filters/whitelisting:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
