load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["filter_handler.go"],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/filter_handler",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/ctrl/ack:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/infra/modules/filters/whitelisting/whitelist_filters:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/proto:go_default_library",
    ],
)
