load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "filter_handler.go",
        "filter_handler_config.go",
        "request_config.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/filter_handler",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/config:go_default_library",
        "//go/lib/ctrl/ack:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/infra/modules/filters/per_as_rate_limiting:go_default_library",
        "//go/lib/infra/modules/filters/request_filters/whitelisting:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "filter_handler_config_test.go",
        "filter_handler_test.go",
        "request_config_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/modules/filters/per_as_rate_limiting:go_default_library",
        "//go/lib/infra/modules/filters/request_filters/whitelisting:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
