load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "packet_rate_limit_config.go",
        "packet_rate_limit_filter.go",
        "rate_limit_config.go",
        "rate_limit_filter.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/per_as_rate_limiting",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/config:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/infra/modules/filters/counting_bloom:go_default_library",
        "//go/lib/periodic:go_default_library",
        "//go/lib/scmp:go_default_library",
        "//go/lib/snet:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "packet_rate_limit_config_test.go",
        "packet_rate_limit_filter_test.go",
        "rate_limit_config_test.go",
        "rate_limit_filter_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spath:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
