load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["request_filters.go"],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/request_filters",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/snet:go_default_library",
    ],
)
