load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "whitelist.go",
        "whitelist_creation.go",
        "whitelisting_settings.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/whitelisting",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/periodic:go_default_library",
        "//go/lib/scmp:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "whitelist_creation_test.go",
        "whitelist_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/snet:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
