load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "drkey_filter_config.go",
        "drkey_filtering.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/packet_filters/drkey_filter",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/config:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/scmp:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spse:go_default_library",
        "//go/lib/spse/scmp_auth:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "drkey_filter_config_test.go",
        "drkey_filtering_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/border/braccept/tpkt:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spath:go_default_library",
        "//go/lib/spse/scmp_auth:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
