load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "path_length_config.go",
        "path_length_filtering.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/packet_filters/path_length",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/config:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/infra/modules/filters/packet_filters:go_default_library",
        "//go/lib/scmp:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spath:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "path_length_config_test.go",
        "path_length_filtering_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spath:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
