load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "interval_request_limit_config.go",
        "interval_request_limit_filter.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/request_filters/interval_request_limiting",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/config:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/infra/modules/filters/request_filters:go_default_library",
        "//go/lib/infra/modules/filters/request_filters/counting_bloom:go_default_library",
        "//go/lib/periodic:go_default_library",
        "//go/lib/snet:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "interval_request_limit_config_test.go",
        "interval_request_limit_filter_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/infra/modules/filters:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
