load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "empty_path_filter.go",
        "path_length_one_filter.go",
        "segment_filter.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/infra/modules/filters/request_filters/path_length",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/infra/modules/filters/request_filters:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spath:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["path_length_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/infra/modules/filters:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spath:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
